<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CESK</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_screen">Menu</string>
    <string name="aashto">AASHTO</string>
    <string name="uscs">USCS</string>
    <string name="isscs">ISSCS</string>
    <string name="usda">USDA</string>
    <string name="methods">beam analysis tool (free)</string>
    <string name="results">calculator (free)</string>
    <string name="videos">basic charts (free)</string>
    <string name="formulars">graph plotter (free)</string>
    <string name="graph">Sieve Analysis</string>
    <string name="graph2">Aggregate Sieve Analysis</string>
    <string name="pastquestions">Lecture notes</string>
    <string name="basicsoilmechanics">Quick notes (free)</string>
    <string name="classtitle">Civil Engineering Menu</string>
    <string name="title_activity_isscs__open">ISSCS_Open</string>
    <string name="title_activity_aashto">AASHTO (soil classification)</string>
    <string name="title_activity_uscs">USCS (soil classification)</string>
    <string name="title_activity_isscs">ISSCS (soil classification)</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_results">Calculator</string>
    <string name="title_activity_methods">about classification methods</string>
    <string name="title_activity_formulars">Documents</string>
    <string name="title_activity_graph">graph sheet</string>
    <string name="title_activity_pastquestions">Sieve Analysis</string>
    <string name="title_activity_basicsoilmechanics">Lecture notes</string>
    <string name="title_activity_diagrams">DiagramActivity</string>
    <string name="title_activity_xy">Graph plotter</string>
    <string name="title_activity_videos">Basic charts</string>
    <string name="title_activity_notes">Quick notes</string>
    <string name="title_activity_asa">Quick notes</string>


    <!-- Calculator -->
    <string name="button_clear">C</string>
    <string name="button_root"> √ </string>
    <string name="button_plus"> + </string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_minus"> - </string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_mul"> x </string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_div"> / </string>
    <string name="button_dot"> . </string>
    <string name="button_0">0</string>
    <string name="button_equals"> = </string>
    <string name="button_mod"> % </string>
    <string name="button_pow"> ^ </string>
    <string name="error">Error</string>
    <string name="backspace">Backspace</string>

    <!-- Quick Notes -->
    <string name="accent_colour">Accent Colour</string>
    <string name="exception">Exception: </string>
    <string name="font_colour">Font Colour</string>
    <string name="new_note">New Note</string>
    <string name="no">No</string>
    <string name="note">Note</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="share_to">Share to:</string>
    <string name="share">Share</string>
    <string name="sortnotes">Sort</string>
    <string name="titlenotes">Title</string>
    <string name="yes">Yes</string>
    <string name="undo">Undo</string>

    <!-- Licencing -->
    <string name="Licencing">Licensing</string>
    <string name="apache_License">\nCopyright 2022 Tochycomputerservices

\nLicensed under the Apache License, Version 2.0 (the "License");
\nyou may not use this file except in compliance with the License.
\nYou may obtain a copy of the License at

\nhttp://www.apache.org/licenses/LICENSE-2.0

\nUnless required by applicable law or agreed to in writing, software
\ndistributed under the License is distributed on an "AS IS" BASIS,
\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
\nSee the License for the specific language governing permissions and
\nlimitations under the License.
\n
\n
        \ntochy@cyberservices.com
    </string>

    <!-- About Us -->
    <string name="company_name">Tochy Computer Services</string>

    <string name="about_us_subtitle">We Build Mobile Apps...</string>
    <string name="about_us_moto">Credits and attribution.</string>
    <string name="about_us_description">Eze-Odikwa Tochukwu- Coding, maintenance and data structures.</string>

    <!-- Notes -->
    <string name="apply_changes">Apply Changes</string>
<string name="background_colour">Background Colour</string>
<string name="colour_indicator">Colour indicator</string>
<string name="colour_navigation_bar">Colour Navigation Bar</string>
<string name="confirm_delete">Confirm Deletion</string>
<string name="confirm_delete_text">Are you sure you want to delete this note?</string>
<string name="delete">Delete</string>
<string name="empty_list_text">Press the button on the bottom right to add a new note!</string>

    <!-- Settings notes roll back -->
    <string name="action_settings">Settings</string>
    <string name="title">Create a new note</string>
    <string name="viewFiles" />
    <string name="main" />
    <string name="sort" />

    <!-- Graphview -->
    <string name="launcher_name">ASA</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete_all">Delete All Data</string>
    <string name="empty_view_title_text">Press the button on the bottom right to start a data entry</string>



    <!-- Beam analysis array -->
    <string-array name="beam_options_array">
        <item>Simple Beam</item>
        <item>Cantilever</item>
    </string-array>

</resources>
